package taskfusion.cli.components;

public class AsciiArt {
    

    public static void showLogo() {

        System.out.println("        ,----,                                                                                                  ");
        System.out.println("      ,/   .`|                                                                                                  ");
        System.out.println("    ,`   .'  :                            ,-.     ,---,.                                                        ");
        System.out.println("  ;    ;     /                        ,--/ /|   ,'  .' |                            ,--,                        ");
        System.out.println(".'___,/    ,'                       ,--. :/ | ,---.'   |         ,--,             ,--.'|    ,---.        ,---,  ");
        System.out.println("|    :     |              .--.--.   :  : ' /  |   |   .'       ,'_ /|   .--.--.   |  |,    '   ,'|   ,-+-. /  | ");
        System.out.println(";    |.';  ;  ,--.--.    /  /    '  |  '  /   :   :  :    .--. |  | :  /  /    '  `--'_   /   /   | ,--.'|'   | ");
        System.out.println("`----'  |  | /       |  |  :  /`./  '  |  :   :   |  |-,,'  /| :  . | |  :  /`./  ,' ,'| .   ; ,. :|   |  ,   | ");
        System.out.println("    '   :  ;.--.  .-. | |  :  ;_    |  |   |  |   :  ;/||  ' | |  . . |  :  ;    '  | | '   | |: :|   | /  | | ");
        System.out.println("    |   |  ' |__|/: . .  |  |    `. '  : |. | |   |   .'|  | ' |  | |  |  |    `. |  | : '   | .; :|   | |  | | ");
        System.out.println("    '   :  | ,  .--.; |   `----.   ||  | ' | |'   :  '  :  | : ;  ; |   `----.   |'  : | |   :    ||   | |  |/  ");
        System.out.println("    ;   |.' /  /  ,.  |  /  /`--'  /'  : |--' |   |  |  '  :  `--'   | /  /`--'  /|  | '.'|   |  / |   | |--'   ");
        System.out.println("    '---'  ;  :   .'   |'--'.     / ;  |,'    |   :  |  :  ,      .-./'--'.     / ;  :    ;`----'  |   |/       ");
        System.out.println("           |  ,     .-./  `--'---'  '--'      |   | ,'   `--`----'      `--'---'  |  ,   /         '---'        ");
        System.out.println("            `--`---'                          `----'                               ---`-'                       ");
        
    }
}
