package taskfusion.cli.controllers;

interface ControllerInterface {

    void showMenu();

}
